--- a/index.css
+++ b/index.css
@@ -1,9 +1,31 @@
-header h1 {
-  display: none;
-}
-
 body {
   height: 98vh;
   width: 98vh;
-  grid-template-areas: "Header", "main", "footer";
+  grid-template-areas: "header", "main", "footer";
+}
+
+header {
+  grid-area: header;
+}
+header h1 {
+  display: none;
+}
+header img {
+  vertical-align: center;
+}
+
+main {
+  grid-area: main;
+  width: 100%;
+  height: 100%;
+}
+main h3 {
+  margin: auto;
+}
+main section div {
+  border: 2px solid black;
+}
+
+footer {
+  grid-area: footer;
 }/*# sourceMappingURL=index.css.map */
