--- a/index.scss
+++ b/index.scss
@@ -1,23 +1,24 @@
 body{
-    height: 98vh;
-    width: 98vh;
+    display: grid;
+    grid-template-rows: auto;
     grid-template-areas: 
-    "header",
-    "main",
+    "header"
+    "main"
     "footer";
 }
 
 header{
     grid-area: header;
-    
-    img{
-        vertical-align: center;
-    }
 
     h1{
         display: none;
     }
+    img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
 
+    }
 }
 
 
@@ -25,7 +26,6 @@ main{
     grid-area: main;
     width: 100%;
     height: 100%;
-
     h3{
        margin: auto;
     }
@@ -34,6 +34,7 @@ main{
 
         div{
             border: 2px solid black;
+            background-color: lightgray;
         }
     }
 }
