--- a/index.scss
+++ b/index.scss
@@ -29,12 +29,15 @@ main{
     h3{
        margin: auto;
     }
-
+div{
     section{
-
-        div{
-            border: 2px solid black;
-            background-color: lightgray;
+            :nth-child(1){
+                display:flex;
+            }
+            div{
+                border: 2px solid black;
+                background-color: lightgray;
+            }
         }
     }
 }
