--- a/index.scss
+++ b/index.scss
@@ -30,10 +30,11 @@ main{
        margin: auto;
     }
 div{
+   > :nth-child(1){
+        display:flex;
+        }
     section{
-            :nth-child(1){
-                display:flex;
-            }
+
             div{
                 border: 2px solid black;
                 background-color: lightgray;
