--- a/index.css
+++ b/index.css
@@ -24,12 +24,17 @@ main {
 main h3 {
   margin: auto;
 }
-main div section :nth-child(1) {
-  display: flex;
+main div section img {
+  width: 100px;
+  height: 100px;
 }
 main div section div {
   border: 2px solid black;
   background-color: lightgray;
+}
+main div p {
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 footer {
