--- a/index.scss
+++ b/index.scss
@@ -22,25 +22,35 @@ header{
 }
 
 
+
 main{
     grid-area: main;
     width: 100%;
     height: 100%;
+    
     h3{
        margin: auto;
     }
 div{
     section{
-            :nth-child(1){
-                display:flex;
-            }
+        img{
+            width: 100px;
+            height: 100px;
+        }
+        
+           
             div{
                 border: 2px solid black;
                 background-color: lightgray;
             }
         }
+        p{
+            padding-left: 10px;
+            padding-right: 10px;
+        }
     }
 }
+
 
 
 footer{
