--- a/index.scss
+++ b/index.scss
@@ -30,16 +30,29 @@ main{
     h3{
        margin: auto;
     }
-    div{
-        section:nth-child(1){
-                display:flex;
-                }
-        section{
 
-                div{
-                    border: 2px solid black;
-                    background-color: lightgray;
-                }
+div{
+   section:nth-child(1){
+        display:flex;
+        }
+    section{
+        img{
+            width: 100px;
+            height: 50px;
+            margin-left: auto;
+            margin-right: auto;
+    
+        }
+        
+           
+            div{
+                border: 2px solid black;
+                background-color: lightgray;
+            }
+        }
+        p{
+            padding-left: 10px;
+            padding-right: 10px;
         }
     }
 }
