--- a/index.scss
+++ b/index.scss
@@ -61,3 +61,17 @@ div{
 footer{
     grid-area: footer;
 }
+
+@media screen and (max-width:800px){
+    body{
+        display: grid;
+        grid-template-rows: auto;
+    }
+    div{
+        section:nth-child(1){
+            display:flex;
+        }
+
+    }
+
+}
