--- a/index.scss
+++ b/index.scss
@@ -75,3 +75,7 @@ footer{
     }
 
 }
+
+//ta bort margin på bilden så den hamnar längst till vänster.
+//gör så att veckan och pilarna är till höger om header IMG
+//gör så att alla dagar ligger vänster om maträtten
