--- a/index.css
+++ b/index.css
@@ -51,6 +51,10 @@ footer {
     display: grid;
     grid-template-rows: auto;
   }
+  img {
+    margin-left: 0;
+    margin-right: 100;
+  }
   div section:nth-child(1) {
     display: flex;
   }
