--- a/index.css
+++ b/index.css
@@ -20,12 +20,20 @@ main {
   grid-area: main;
   width: 100%;
   height: 100%;
+  margin: auto;
+  background-color: blue;
 }
 main h3 {
   margin: auto;
 }
+main div {
+  background-color: white;
+}
 main div section:nth-child(1) {
   display: flex;
+}
+main div section {
+  width: 80%;
 }
 main div section img {
   width: 100px;
@@ -46,16 +54,41 @@ footer {
   grid-area: footer;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (min-width: 800px) {
   body {
     display: grid;
     grid-template-rows: auto;
   }
-  img {
-    margin-left: 0;
-    margin-right: 100;
+  div {
+    width: 50%;
+    margin: auto;
   }
   div section:nth-child(1) {
+    display: flex;
+  }
+  div section {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 1fr;
+    padding-top: 10px;
+    margin: auto;
+  }
+  div section div {
+    width: 100%;
+  }
+  div section p {
+    font-size: 20px;
+    text-align: ce;
+  }
+  div section h3 {
+    margin-left: 0;
+    margin-right: 0;
+    font-size: 30px;
+    text-align: center;
+  }
+  div section img {
+    width: 100px;
+    height: 50px;
     display: flex;
   }
 }/*# sourceMappingURL=index.css.map */
