--- a/index.scss
+++ b/index.scss
@@ -26,16 +26,21 @@ main{
     grid-area: main;
     width: 100%;
     height: 100%;
+    margin: auto;
+    background-color: blue;
 
     h3{
        margin: auto;
     }
 
 div{
-   section:nth-child(1){
+    background-color: white;
+    section:nth-child(1){
         display:flex;
+
         }
     section{
+        width: 80%;
         img{
             width: 100px;
             height: 50px;
@@ -62,20 +67,46 @@ footer{
     grid-area: footer;
 }
 
-@media screen and (max-width:800px){
+@media screen and (min-width:800px){
     body{
         display: grid;
         grid-template-rows: auto;
     }
     img{
-        margin-left: 0;
-        margin-right: 100;
+
     }
     div{
+        width: 50%;
+        margin: auto;
         section:nth-child(1){
             display:flex;
         }
-
+    section{
+            display: grid;
+            grid-template-columns: auto;
+            grid-template-rows: 1fr ;
+            padding-top: 10px;
+            margin: auto;
+        
+            div{
+                width: 100%;
+            }
+            p{
+                font-size: 20px;
+                text-align: ce;
+            }
+        h3{
+            margin-left: 0;
+            margin-right: 0;
+            font-size: 30px;
+            text-align: center;
+        }
+        img{
+            width: 100px;
+            height: 50px;
+            display:flex;
+        }
+    }
     }
 
 }
