--- a/index.css
+++ b/index.css
@@ -21,7 +21,6 @@ main {
   width: 100%;
   height: 100%;
   margin: auto;
-  background-color: blue;
 }
 main h3 {
   margin: auto;
@@ -30,24 +29,30 @@ main div {
   background-color: white;
 }
 main div section:nth-child(1) {
-  display: flex;
+  display: grid;
+  grid-template-columns: auto 50px auto;
 }
-main div section {
-  width: 80%;
+main div section h2 {
+  text-align: center;
 }
 main div section img {
   width: 100px;
-  height: 50px;
-  margin-left: auto;
-  margin-right: auto;
 }
 main div section div {
   border: 2px solid black;
   background-color: lightgray;
 }
-main div p {
+main div section p {
   padding-left: 10px;
   padding-right: 10px;
+}
+main div section img:nth-child(1) {
+  margin-left: auto;
+  margin-right: 40px;
+}
+main div section img:nth-child(3) {
+  margin-right: auto;
+  margin-left: 40px;
 }
 
 footer {
@@ -59,36 +64,28 @@ footer {
     display: grid;
     grid-template-rows: auto;
   }
-  div {
-    width: 50%;
-    margin: auto;
+  header img {
+    margin-right: 0;
+    margin-left: 0;
   }
-  div section:nth-child(1) {
-    display: flex;
+  div {
+    width: 90%;
+    margin: auto;
   }
   div section {
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: 150px auto;
     grid-template-rows: 1fr;
     padding-top: 10px;
     margin: auto;
   }
-  div section div {
-    width: 100%;
-  }
   div section p {
     font-size: 20px;
-    text-align: ce;
   }
   div section h3 {
     margin-left: 0;
     margin-right: 0;
     font-size: 30px;
     text-align: center;
-  }
-  div section img {
-    width: 100px;
-    height: 50px;
-    display: flex;
   }
 }/*# sourceMappingURL=index.css.map */
