--- a/index.css
+++ b/index.css
@@ -16,36 +16,26 @@ header img {
   margin-right: auto;
 }
 
-main {
-  grid-area: main;
-  width: 100%;
-  height: 100%;
-  margin: auto;
-  background-color: blue;
-}
-main h3 {
-  margin: auto;
-}
-main div {
+div {
   background-color: white;
 }
-main div section:nth-child(1) {
+div section:nth-child(1) {
   display: flex;
 }
-main div section {
-  width: 80%;
+div section {
+  width: 100%;
 }
-main div section img {
+div section img {
   width: 100px;
   height: 50px;
   margin-left: auto;
   margin-right: auto;
 }
-main div section div {
+div section div {
   border: 2px solid black;
   background-color: lightgray;
 }
-main div p {
+div p {
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -55,18 +45,35 @@ footer {
 }
 
 @media screen and (min-width: 800px) {
+  main {
+    grid-area: main;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    background-color: lightgray;
+  }
+  main h3 {
+    margin: auto;
+  }
+  header {
+    grid-area: header;
+    background-color: lightgray;
+  }
   body {
     display: grid;
     grid-template-rows: auto;
+    margin: 0px;
   }
   div {
-    width: 50%;
+    width: 60%;
     margin: auto;
+    padding-bottom: 10px;
   }
   div section:nth-child(1) {
     display: flex;
   }
   div section {
+    width: 80%;
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: 1fr;
