--- a/index.scss
+++ b/index.scss
@@ -22,7 +22,12 @@ header{
     }
 }
 
-
+main{
+    grid-area: main;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    background-color: blue;
     h3{
        margin: auto;
     }
@@ -40,14 +45,13 @@ div{
             height: 50px;
             margin-left: auto;
             margin-right: auto;
-    
+
         }
-        
-           
+
+
             div{
                 border: 2px solid black;
                 background-color: lightgray;
-                
             }
         }
         p{
@@ -63,53 +67,45 @@ footer{
 }
 
 @media screen and (min-width:800px){
-    main{
-        grid-area: main;
-        width: 100%;
-        height: 100%;
-        margin: auto;
-        background-color: lightgray;
-        h3{
-           margin: auto;
-        }
-    }
-    header{
-        grid-area: header;
-        background-color: lightgray;
-    }
-    
     body{
         display: grid;
         grid-template-rows: auto;
-        margin: 0px;
     }
-    header{
-        img{
-            margin-right: 0;
-            margin-left: 0;
-        }
+    img{
+
     }
     div{
-        width: 50%;
+        width: 60%;
         margin: auto;
         section:nth-child(1){
             display:flex;
         }
     section{
             display: grid;
-            grid-template-columns: 150px auto;
+            grid-template-columns: auto;
             grid-template-rows: 1fr ;
             padding-top: 10px;
             margin: auto;
+
+            div{
+                width: 100%;
+            }
             p{
                 font-size: 20px;
+                text-align: ce;
             }
-            h3{
-                margin-left: 0;
-                margin-right: 0;
-                font-size: 30px;
-                text-align: center;
-            }
+        h3{
+            margin-left: 0;
+            margin-right: 0;
+            font-size: 30px;
+            text-align: center;
+        }
+        img{
+            width: 100px;
+            height: 50px;
+            display:flex;
         }
     }
+    }
+
 }
