--- a/index.scss
+++ b/index.scss
@@ -34,7 +34,7 @@ div{
 
         }
     section{
-        width: 80%;
+        width: 100%;
         img{
             width: 100px;
             height: 50px;
@@ -55,7 +55,7 @@ div{
             padding-right: 10px;
         }
     }
-}
+
 
 
 footer{
@@ -66,16 +66,18 @@ footer{
     main{
         grid-area: main;
         width: 100%;
-        height: 100%;
         margin: auto;
-        background-color: lightgray;
+        background-color: honeydew;
+        border-top-style: solid;
+        border-top-color: black;
+        
         h3{
            margin: auto;
         }
     }
     header{
         grid-area: header;
-        background-color: lightgray;
+        background-color: lightcyan;
     }
     
     body{
@@ -85,28 +87,33 @@ footer{
     }
     header{
         img{
-            margin-right: 0;
-            margin-left: 0;
+            margin-left: auto;
+            margin-right: auto;
         }
     }
     div{
-        width: 50%;
+        width: 80%;
+        height: 100%;
         margin: auto;
+        border-bottom-style: solid;
+        border-right-style: solid;
+        border-left-style: solid;
+        border-color: black;
+        box-shadow: 7px 7px 5px black;
+        
         section:nth-child(1){
             display:flex;
         }
     section{
             display: grid;
-            grid-template-columns: 150px auto;
-            grid-template-rows: 1fr ;
             padding-top: 10px;
             margin: auto;
+            padding-bottom: 15px;
+
             p{
                 font-size: 20px;
             }
             h3{
-                margin-left: 0;
-                margin-right: 0;
                 font-size: 30px;
                 text-align: center;
             }
