--- a/index.css
+++ b/index.css
@@ -16,7 +16,12 @@ header img {
   margin-right: auto;
 }
 
-h3 {
+main {
+  grid-area: main;
+  width: 80%;
+  margin: auto;
+}
+main h3 {
   margin: auto;
 }
 
@@ -67,11 +72,10 @@ footer {
   body {
     display: grid;
     grid-template-rows: auto;
-    margin: 0px;
   }
   header img {
-    margin-left: auto;
     margin-right: auto;
+    margin-left: auto;
   }
   div {
     width: 80%;
@@ -94,6 +98,7 @@ footer {
   }
   div section p {
     font-size: 20px;
+    text-align: ce;
   }
   div section h3 {
     font-size: 30px;
