--- a/index.css
+++ b/index.css
@@ -2,10 +2,15 @@ body {
   display: grid;
   grid-template-rows: auto;
   grid-template-areas: "header" "main" "footer";
+  margin-left: 0px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  margin-right: 0px;
 }
 
 header {
   grid-area: header;
+  background-color: lightcyan;
 }
 header h1 {
   display: none;
@@ -18,11 +23,15 @@ header img {
 
 main {
   grid-area: main;
-  width: 80%;
+  width: 100%;
   margin: auto;
+  border-top-style: solid;
+  border-top-color: black;
 }
 main h3 {
   margin: auto;
+  font-size: 30px;
+  text-align: center;
 }
 
 div {
@@ -32,7 +41,9 @@ div section:nth-child(1) {
   display: flex;
 }
 div section {
-  width: 100%;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 div section img {
   width: 100px;
@@ -43,10 +54,13 @@ div section img {
 div section div {
   border: 2px solid black;
   background-color: lightgray;
+  box-shadow: 3px 3px 2px black;
 }
 div p {
   padding-left: 10px;
   padding-right: 10px;
+  text-align: center;
+  font-size: 20px;
 }
 
 footer {
@@ -89,7 +103,6 @@ footer {
     border-right-style: solid;
     border-left-style: solid;
     border-color: black;
-    box-shadow: 7px 7px 5px black;
   }
   div section:nth-child(1) {
     display: flex;
