--- a/index.scss
+++ b/index.scss
@@ -5,12 +5,15 @@ body{
     "header"
     "main"
     "footer";
-    
+    margin-left: 0px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    margin-right: 0px;
 }
 
 header{
     grid-area: header;
-
+    background-color: lightcyan;
     h1{
         display: none;
     }
@@ -24,10 +27,15 @@ header{
 
 main{
     grid-area: main;
-    width: 80%;
+    width: 100%;
     margin: auto;
+
+    border-top-style: solid;
+    border-top-color: black;
     h3{
        margin: auto;
+       font-size: 30px;
+       text-align: center;
     }
 }
 div{
@@ -35,9 +43,12 @@ div{
     section:nth-child(1){
         display:flex;
 
+
         }
         section{
-            width: 100%;
+            width: 80%;
+            margin-left: auto;
+            margin-right: auto;
             img{
                 width: 100px;
                 height: 50px;
@@ -50,11 +61,14 @@ div{
                 div{
                     border: 2px solid black;
                     background-color: lightgray;
+                    box-shadow: 3px 3px 2px black;
                 }
             }
             p{
                 padding-left: 10px;
                 padding-right: 10px;
+                text-align: center;
+                font-size: 20px;
             }
         }
     
@@ -104,7 +118,7 @@ div{
             border-right-style: solid;
             border-left-style: solid;
             border-color: black;
-            box-shadow: 7px 7px 5px black;
+            
     
             section:nth-child(1){
                 display:flex;
