--- a/index.css
+++ b/index.css
@@ -62,6 +62,10 @@ div p {
   text-align: center;
   font-size: 20px;
 }
+div p span {
+  font-size: 25px;
+  margin-right: 15px;
+}
 
 footer {
   grid-area: footer;
