--- a/index.scss
+++ b/index.scss
@@ -69,6 +69,11 @@ div{
                 padding-right: 10px;
                 text-align: center;
                 font-size: 20px;
+                
+                span{
+                    font-size: 25px;
+                    margin-right: 15px;
+                }
             }
         }
     
