--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ body {
   display: grid;
   grid-template-rows: auto;
   grid-template-areas: "header" "main" "footer";
+  margin: 0 0 0 0;
 }
 
 header {
@@ -10,8 +11,7 @@ header {
 }
 header img {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto auto;
 }
 header h1 {
   display: none;
@@ -20,7 +20,8 @@ header h1 {
 main {
   grid-area: main;
   width: 100%;
-  margin: auto;
+  margin: 0 auto;
+  height: 100vh;
   border-top-style: solid;
   border-top-color: black;
 }
@@ -56,44 +57,41 @@ div p {
   padding-left: 10px;
   padding-right: 10px;
   text-align: center;
-  font-size: 20px;
+  font-size: 2rem;
 }
 div p span {
-  font-size: 25px;
+  font-size: 2.2rem;
   margin-right: 15px;
 }
 
 footer {
   grid-area: footer;
+  background-color: honeydew;
 }
 
 @media screen and (min-width: 800px) {
   main {
     grid-area: main;
     width: 100%;
-    margin: auto;
     background-color: honeydew;
     border-top-style: solid;
     border-top-color: black;
+    margin: 0 auto;
+    height: 100vh;
   }
   main h3 {
     margin: auto;
   }
   body {
     display: grid;
-    grid-template-rows: auto;
   }
   header img {
-    margin-right: auto;
-    margin-left: auto;
+    margin: auto auto;
   }
   div {
     width: 80%;
-    height: 100%;
     margin: auto;
-    border-bottom-style: solid;
-    border-right-style: solid;
-    border-left-style: solid;
+    border-style: none solid solid solid;
     border-color: black;
   }
   div section {
@@ -103,11 +101,15 @@ footer {
     padding-bottom: 15px;
   }
   div section p {
-    font-size: 20px;
+    font-size: 2rem;
     text-align: center;
   }
   div section h3 {
-    font-size: 30px;
+    font-size: 2.5rem;
     text-align: center;
+  }
+  footer {
+    grid-area: footer;
+    background-color: honeydew;
   }
 }/*# sourceMappingURL=index.css.map */
