--- a/index.scss
+++ b/index.scss
@@ -5,6 +5,9 @@ body{
     "header"
     "main"
     "footer";
+    margin: 0 0 0 0;
+
+    
 }
 
 header{
@@ -12,8 +15,7 @@ header{
     background-color: lightcyan;
     img{
         display: block;
-        margin-left: auto;
-        margin-right: auto;
+        margin: auto auto 
 
     }
     h1{
@@ -24,7 +26,8 @@ header{
 main{
     grid-area: main;
     width: 100%;
-    margin: auto;
+    margin: 0 auto;
+    height: 100vh;
 
     border-top-style: solid;
     border-top-color: black;
@@ -59,9 +62,9 @@ div{
                 padding-left: 10px;
                 padding-right: 10px;
                 text-align: center;
-                font-size: 20px;
+                font-size: 2rem;
                 span{
-                    font-size: 25px;
+                    font-size: 2.2rem;
                     margin-right: 15px;
                 }
             }
@@ -71,17 +74,18 @@ div{
     
     footer{
         grid-area: footer;
+        background-color: honeydew;
     }
     
     @media screen and (min-width:800px){
         main{
             grid-area: main;
             width: 100%;
-            margin: auto;
             background-color: honeydew;
             border-top-style: solid;
             border-top-color: black;
-    
+            margin: 0 auto;
+            height: 100vh;
             h3{
                margin: auto;
             }
@@ -89,21 +93,18 @@ div{
     
         body{
             display: grid;
-            grid-template-rows: auto;
+
+            
         }
         header{
             img{
-                margin-right: auto;
-                margin-left: auto;
+                margin: auto auto;
             }
         }
         div{
             width: 80%;
-            height: 100%;
             margin: auto;
-            border-bottom-style: solid;
-            border-right-style: solid;
-            border-left-style: solid;
+            border-style: none solid solid solid;
             border-color: black;
             
         section{
@@ -112,13 +113,17 @@ div{
                 margin: auto;
                 padding-bottom: 15px;
                 p{
-                    font-size: 20px;
+                    font-size: 2rem;
                     text-align: center;
                 }
                 h3{
-                    font-size: 30px;
+                    font-size: 2.5rem;
                     text-align: center;
                 }
             }
+        }
+        footer{
+            grid-area: footer;
+            background-color: honeydew;
         }
     }
